--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,18 +13,21 @@ body {
 }
 
 .popup {
-  font-size: 1.5rem;
-  max-width: 500px;
+  font-size: 1rem;
+  max-width: 800px;
   border-radius: 20px;
-  padding: 1.5rem;
+  padding: 1rem;
+  z-index: 99;
 }
+
 /*marker*/
 .marker {
   transform: translate(-90%, -20%);
 }
 
 .mapboxgl-popup {
-  border-radius: 5px;
+  border-radius: 20x;
+  max-width: 800px;
   box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.6);
 }
 
@@ -34,7 +37,14 @@ body {
 .entry-form button {
   margin: 0.75rem 0;
   display: block;
-  width: 100%;
-  font-size: 1.5rem;
+  width: 500px;
+  font-size: 1rem;
   border-radius: 20px;
+}
+
+/* any images inside the pop-ups */
+.popup img {
+  width: 300px;
+  height: auto;
+  text-align: center;
 }
